@@ -3,7 +3,7 @@
 # options.pl: generate options dialog boxes
 # $Id$
 
-# Copyright (c) 2001-2007 Philip Kendall, Marek Januszewski, Stuart Brady
+# Copyright (c) 2001-2013 Philip Kendall, Marek Januszewski, Stuart Brady
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -35,14 +35,14 @@ my %combo_default;
 my @dialogs = Fuse::Dialog::read( shift @ARGV );
 
 print Fuse::GPL( 'options.c: options dialog boxes',
-		 '2001-2009 Philip Kendall, Marek Januszewski, Stuart Brady' ) . << "CODE";
+                 '2001-2013 Philip Kendall, Marek Januszewski, Stuart Brady' ) . << "CODE";
 
 /* This file is autogenerated from options.dat by options.pl.
    Do not edit unless you know what you\'re doing! */
 
 #include <config.h>
 
-#ifdef UI_WIN32		/* Use this file iff we're using WIN32 */
+#ifdef UI_WIN32                /* Use this file if we're using WIN32 */
 
 #include <libspectrum.h>
 
@@ -57,7 +57,7 @@ print Fuse::GPL( 'options.c: options dialog boxes',
 
 static int
 option_enumerate_combo( const char **options, char *value, int count,
-			int def ) {
+                        int def ) {
   int i;
   if( value != NULL ) {
     for( i = 0; i < count; i++) {
@@ -120,9 +120,9 @@ CODE
 int
 option_enumerate_$_->{name}_$widget->{value}( void ) {
   return option_enumerate_combo( $_->{name}_$widget->{value}_combo,
-				 settings_current.$widget->{value},
-				 $_->{name}_$widget->{value}_combo_count,
-				 $combo_default{$widget->{value}} );
+                                 settings_current.$widget->{value},
+                                 $_->{name}_$widget->{value}_combo_count,
+                                 $combo_default{$widget->{value}} );
 }
 
 CODE
@@ -134,67 +134,54 @@ CODE
     my $optname = uc( "OPT_$_->{name}" );
 
 print << "CODE";
-static BOOL CALLBACK
-menu_options_$_->{name}_proc( HWND hwndDlg, UINT msg, WPARAM wParam, LPARAM lParam )
+static void
+menu_options_$_->{name}_init( HWND hwndDlg )
 {
   char buffer[80];
   int i;
-  
+
   i = 0;
-  buffer[0] = '\\0';		/* Shut gcc up */
-  
-  switch( msg )
-  {
-    case WM_INITDIALOG:
-    {
-      /* FIXME: save the handle returned by LoadIcon() in win32ui.c */
-      SendMessage( hwndDlg, WM_SETICON, ICON_SMALL,
-        (LPARAM)LoadIcon( fuse_hInstance, "win32_icon" ) );
+  buffer[0] = '\\0';          /* Shut gcc up */
 
-      /* initialize the controls with current settings */
-
-      /* FIXME split *_init and *_done functions out of *_proc function */
 CODE
-
     foreach my $widget ( @{ $_->{widgets} } ) {
 	my $type = $widget->{type};
 
 	if( $type eq "Checkbox" ) {
 	    my $idcname = uc( "$widget->{value}" );
         print << "CODE";
-      SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, BM_SETCHECK,
-        settings_current.$widget->{value} ? BST_CHECKED : BST_UNCHECKED, 0 );
+  SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, BM_SETCHECK,
+    settings_current.$widget->{value} ? BST_CHECKED : BST_UNCHECKED, 0 );
 
 CODE
 	} elsif( $widget->{type} eq "Entry" ) {
 	    my $idcname = uc( "$widget->{value}" );
         print << "CODE";
-      /* FIXME This is asuming SendDlgItemMessage is not UNICODE */
-      snprintf( buffer, 80, "%d", settings_current.$widget->{value} );
-      SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, WM_SETTEXT,
-        0, (LPARAM) buffer );
+  /* FIXME This is asuming SendDlgItemMessage is not UNICODE */
+  snprintf( buffer, 80, "%d", settings_current.$widget->{value} );
+  SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, WM_SETTEXT,
+                      0, (LPARAM) buffer );
 
 CODE
 	} elsif( $type eq "Combo" ) {
           my $idcname = uc( "$widget->{value}" );
           print << "CODE";
-      for( i = 0; i < $_->{name}_$widget->{value}_combo_count; i++ ) {
-        /* FIXME This is asuming SendDlgItemMessage is not UNICODE */
-        SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_ADDSTRING,
-          0, (LPARAM) $_->{name}_$widget->{value}_combo[i] );
+  for( i = 0; i < $_->{name}_$widget->{value}_combo_count; i++ ) {
+    /* FIXME This is asuming SendDlgItemMessage is not UNICODE */
+    SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_ADDSTRING,
+                        0, (LPARAM) $_->{name}_$widget->{value}_combo[i] );
+  }
+  SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_SETCURSEL,
+                      (LPARAM) $combo_default{$widget->{value}}, 0 );
+  if( settings_current.$widget->{value} != NULL ) {
+    for( i = 0; i < $_->{name}_$widget->{value}_combo_count; i++ ) {
+      if( !strcmp( settings_current.$widget->{value},
+                   $_->{name}_$widget->{value}_combo[i] ) ) {
+        SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname},
+                            CB_SETCURSEL, i, 0 );
       }
-      SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_SETCURSEL,
-        (LPARAM) $combo_default{$widget->{value}}, 0 );
-      if( settings_current.$widget->{value} != NULL ) {
-        for( i = 0; i < $_->{name}_$widget->{value}_combo_count; i++ ) {
-          if( !strcmp( settings_current.$widget->{value},
-                       $_->{name}_$widget->{value}_combo[i] ) ) {
-            SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname},
-              CB_SETCURSEL, i, 0 );
-          }
-        }
-      }
-
+    }
+  }
 CODE
 	} else {
           die "Unknown type `$type'";
@@ -202,15 +189,15 @@ CODE
     }
 
 print << "CODE";
-      return FALSE;
-    }
+}
 
-    case WM_COMMAND:
-      switch( LOWORD( wParam ) )
-      {
-        case IDOK:
-        {
-          /* Read the controls and apply the settings */
+static void
+menu_options_$_->{name}_done( HWND hwndDlg )
+{
+  char buffer[80];
+
+  buffer[0] = '\\0';          /* Shut gcc up */
+
 CODE
     foreach my $widget ( @{ $_->{widgets} } ) {
 	my $type = $widget->{type};
@@ -219,25 +206,26 @@ CODE
 	    my $idcname = uc( "$widget->{value}" );
 
 	    print << "CODE";
-          settings_current.$widget->{value} =
-            IsDlgButtonChecked( hwndDlg, IDC_${optname}_${idcname} );
+  settings_current.$widget->{value} =
+    IsDlgButtonChecked( hwndDlg, IDC_${optname}_${idcname} );
 
 CODE
 	} elsif( $widget->{type} eq "Entry" ) {
 	    my $idcname = uc( "$widget->{value}" );
         print << "CODE";
-          /* FIXME This is asuming SendDlgItemMessage is not UNICODE */
-          SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, WM_GETTEXT, 80, (LPARAM) buffer );
-          settings_current.$widget->{value} = atoi( buffer );  
+  /* FIXME This is asuming SendDlgItemMessage is not UNICODE */
+  SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, WM_GETTEXT,
+                      80, (LPARAM) buffer );
+  settings_current.$widget->{value} = atoi( buffer );
 
 CODE
 	} elsif( $widget->{type} eq "Combo" ) {
 	    my $idcname = uc( "$widget->{value}" );
 	    print << "CODE";
-          free( settings_current.$widget->{value} );
-          settings_current.$widget->{value} =
-            utils_safe_strdup( $_->{name}_$widget->{value}_combo[
-            SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_GETCURSEL, 0, 0 ) ] );
+  free( settings_current.$widget->{value} );
+  settings_current.$widget->{value} =
+    utils_safe_strdup( $_->{name}_$widget->{value}_combo[
+    SendDlgItemMessage( hwndDlg, IDC_${optname}_${idcname}, CB_GETCURSEL, 0, 0 ) ] );
 
 CODE
         } else {
@@ -245,21 +233,46 @@ CODE
         }
     }
 
-    print "          $_->{posthook}();\n\n" if $_->{posthook};
+    print "  $_->{posthook}();\n\n" if $_->{posthook};
 
     print << "CODE";
-          win32statusbar_set_visibility( settings_current.statusbar );
-          display_refresh_all();
+  win32statusbar_set_visibility( settings_current.statusbar );
+  display_refresh_all();
 
-          EndDialog( hwndDlg, 0 );
+  EndDialog( hwndDlg, 0 );
+}
+
+static BOOL CALLBACK
+menu_options_$_->{name}_proc( HWND hwndDlg, UINT msg, WPARAM wParam GCC_UNUSED,
+                              LPARAM lParam GCC_UNUSED )
+{
+  switch( msg )
+  {
+    case WM_INITDIALOG:
+    {
+      /* FIXME: save the handle returned by LoadIcon() in win32ui.c */
+      SendMessage( hwndDlg, WM_SETICON, ICON_SMALL,
+                   (LPARAM)LoadIcon( fuse_hInstance, "win32_icon" ) );
+
+      /* initialize the controls with current settings */
+      menu_options_$_->{name}_init( hwndDlg );
+
+      return TRUE;
+    }
+
+    case WM_COMMAND:
+      switch( LOWORD( wParam ) )
+      {
+        case IDOK:
+          /* Read the controls and apply the settings */
+          menu_options_$_->{name}_done( hwndDlg );
           return 0;
-        }
 
         case IDCANCEL:
           EndDialog( hwndDlg, 0 );
           return 0;
-        }
-        break;
+      }
+      break;
 
     case WM_CLOSE:
       EndDialog( hwndDlg, 0 );
@@ -270,7 +283,7 @@ CODE
 }
 
 void
-menu_options_$_->{name}( int action )
+menu_options_$_->{name}( int action GCC_UNUSED )
 {
   fuse_emulation_pause();
 
